--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ argparse==1.2.1
 beautifulsoup4==4.3.2
 cssselect==0.9.1
 lxml==3.4.4
+nose==1.3.6
 pyOpenSSL==0.15.1
 queuelib==1.2.2
 requests==2.6.2
